--- a/readme
+++ b/readme
@@ -18,3 +18,5 @@ For more information http://db.jgps.me/protocol#input
 References:
 https://github.com/jettero/jlt
 http://db.jgps.me/protocol#input
+
+This app was deployed to heroku
