--- a/readme
+++ b/readme
@@ -19,4 +19,4 @@ References:
 https://github.com/jettero/jlt
 http://db.jgps.me/protocol#input
 
-This app was deployed to heroku
+This app was deployed to Heroku
